--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "normalize-css": "^8.0.0",
     "bower-webfontloader": "^1.6.6",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "jquery-selectric": "^1.13.0"
   }
 }
