--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "normalize-css": "^8.0.0",
     "bower-webfontloader": "^1.6.6",
     "jquery": "^3.3.1",
-    "jquery-selectric": "^1.13.0"
+    "jquery-selectric": "^1.13.0",
+    "reset-css": "^4.0.1"
   }
 }
