--- a/src/index.yaml
+++ b/src/index.yaml
@@ -16,6 +16,9 @@ PageList:
 - file: basket.html
   titleName: Basket
   ready: 80
+- file: pedalbox.html
+  titleName: Pedalbox
+  ready: 10
 - file: 404.html
   titleName: 404
   ready: 93
