--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "bower-webfontloader": "^1.6.6",
     "jquery": "^3.3.1",
     "jquery-selectric": "^1.13.0",
-    "reset-css": "^4.0.1"
+    "reset-css": "^4.0.1",
+    "swiper": "^4.4.2"
   }
 }
